# pyra

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  application.yml  celery.txt  docker-compose.yml  main.py  pyproject.toml  schedule.py  test.py
.cert/: private.pem  public.pem
apps/admin/: manifest.json
apps/admin/data/: admin.xml  groups.xml
apps/admin/models/: __init__.py  groups.py  ir_agents.py  ir_agents_category.py  ir_model_data.py  logger.py  session_message.py  session_meta_dat.py  user.py
apps/admin/views/: os.py
apps/lincy/: manifest.json
apps/lincy/models/: __init__.py
apps/web/: manifest.json
apps/web/data/: users.xml
apps/web/models/: __init__.py  ir_logger.py  ir_model_data.py
apps/web/tasks/: __init__.py
apps/web/views/: os.py
conf/: settings.py
core/ai/: llm.py  skills.py
core/conf/: __init__.py
core/config/: __init__.py
core/crypto/: rsa.py
core/db/: client.py
core/reflect/: db.py  logger.py  model.py
core/servers/: boot.py  command.py  log.py  parse2xml.py  rsa_utils.py  tasks.py  web.py
rcc/: config.py
server/: command.py  parse2xml.py
tokio/: tasks.py
utils/: app.py  log.py  web.py
