[project]
name = "pyra"
version = "1.0.0"
description = "AI"
authors = [
    {name = "camos"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "sanic (>=25.12.0,<26.0.0)",
    "sanic-cors (>=2.2.0,<3.0.0)",
    "sanic-scheduler (>=1.0.7,<2.0.0)",
    "sanic-dantic (>=1.2.2,<2.0.0)",
    "sanic-security (>=1.17.5,<2.0.0)",
    "sanic-redis (>=0.6.0,<0.7.0)",
    "sanic-session (>=0.8.0,<0.9.0)",
    "sanic-cache (>=0.1.1,<0.2.0)",
    "sanic-limiter (>=0.1.3,<0.2.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "sanic-jinja2 (>=2022.11.11,<2023.0.0)",
    "sanic-jwt (>=1.8.0,<2.0.0)",
    "sanic-prometheus (>=0.2.1,<0.3.0)",
    "sanic-sentry (>=0.1.7,<0.2.0)",
    "sanic-gunicorn (>=0.1.2,<0.2.0)",
    "sanic-restful (>=0.1.1,<0.2.0)",
    "sanic-babel (>=0.3.0,<0.4.0)",
    "sanic-compress (>=0.1.1,<0.2.0)",
    "sanic-validation (>=0.5.1,<0.6.0)",
    "sanic-envconfig (>=1.3.4,<2.0.0)",
    "sanic-ext (>=25.12.0,<26.0.0)",
    "sanic-testing (>=24.6.0,<25.0.0)",
    "tortoise-orm (>=1.1.5,<2.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "asyncmy (>=0.2.11,<0.3.0)",
    "result (>=0.17.0,<0.18.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "yagmail (>=0.15.293,<0.16.0)",
    "yagmail (>=0.15.293,<0.16.0)",
    "celery (>=5.6.2,<6.0.0)",
    "bcrypt (>=5.0.0,<6.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "mimesis (>=19.1.0,<20.0.0)",
    "faker (>=40.5.1,<41.0.0)",
    "cryptography (>=46.0.5,<47.0.0)",
    "pyjwt (>=2.11.0,<3.0.0)",
    "pypdf (>=6.7.2,<7.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "xlrd (>=2.0.2,<3.0.0)",
    "pdfplumber (>=0.11.9,<0.12.0)",
    "python-docx (>=1.2.0,<2.0.0)",
    "python-pptx (>=1.0.2,<2.0.0)",
    "pillow (>=12.1.1,<13.0.0)",
    "asgiref (>=3.11.1,<4.0.0)",
    "markdown (>=3.10.2,<4.0.0)",
    "htmldocx (>=0.0.6,<0.0.7)",
    "pdfkit (>=1.0.0,<2.0.0)",
    "docxtpl (>=0.20.2,<0.21.0)",
    "shapely (>=2.1.2,<3.0.0)",
    "mammoth (>=1.11.0,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "langchain (>=1.2.10,<2.0.0)",
    "langgraph (>=1.0.9,<2.0.0)",
    "langchain-openai (>=1.1.10,<2.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "langchain-core (>=1.2.15,<2.0.0)",
    "langgraph-checkpoint-postgres (>=3.0.4,<4.0.0)",
    "langchain-experimental (>=0.4.1,<0.5.0)",
    "graphrag (>=3.0.4,<4.0.0)",
    "graphrag (>=3.0.4,<4.0.0)",
    "neo4j (>=6.1.0,<7.0.0)",
    "pycryptodome (>=3.23.0,<4.0.0)",
    "aioredlock (>=0.7.3,<0.8.0)",
    "qdrant-client (>=1.17.0,<2.0.0)",
    "langchain-qdrant (>=1.1.0,<2.0.0)",
    "redisbeat (>=1.2.6,<2.0.0)",
    "eventlet (>=0.40.4,<0.41.0)",
    "langchain-ollama (>=1.0.1,<2.0.0)",
    "langchain-voyageai (>=0.3.2,<0.4.0)",
    "langchain-mcp-tools (>=0.3.2,<0.4.0)",
    "langchain-postgres (>=0.0.17,<0.0.18)",
    "tavily-python (>=0.7.22,<0.8.0)"
]

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
